Fri Jan  2 23:55:24 CST 1998 Shawn T. Amundson <amundson@gimp.org>

	* Several portability fixes from Michael Callahan 
          <callahan@xmission.com> including adding in missing
 	  #includes and adding void in function prototypes.

Fri Jan  2 19:28:52 1988 Jay Painter <jpaint@serv.net>
	* gtk/gtkclist.h:
	* gtk/gtkclist.c:
	* gtk/gtk.h:
	* gtk/testgtk.c:
	* gtk/testgtkrc: added GtkCList, column list widget, and a small test
	to testgtk

Fri Jan  2 15:42:51 1998  Federico Mena  <federico@bananoid.nuclecu.unam.mx>

	* gtk/gtkmain.c (gtk_main_iteration): Make the big switch handle
	GDK_NO_EXPOSE and GDK_VISIBILITY_NOTIFY events.

Fri Jan  2 12:07:33 CST 1998 Shawn T. Amundson <amundson@gimp.org>

	* gtk/gtkviewport.c: corrects a small resize bug in the 
          viewport widget.  The viewport widget provides a _set_shadow 
          function to draw its shadows. But if GTK_SHADOW_NONE is sent 
          to this function, the viewport isn't resized correctly (it's 
          still considered as a shadowed widget).  (gtk-fortier-971213-0)

	* gtk/gtknotebook.c: this patch fixes the redraw problems of 
          notebook tabs, without using gdk_gc_set_clip_rectangle.
          (gtk-hamann_jeske-971218-0)
 
	* add gtk_widget_(show/hide)_all (Stefan Wille)
          (gtk-wille-301297-0)  Patch for testgtk not included
          because it did not patch clean.  

Thu Jan  1 21:21:56 PST 1998 Manish Singh <yosh@gimp.org>

	* configure.in: fixed up the xinput test
	* Miscellaneous portability fixes.

Mon Dec 29 22:05:45 1997  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gdk/gdkgc.c (gdk_gc_copy): New function, used to copy the values
	from one gc to another gc.

Sat Dec 27 20:39:99 1997  Elliot Lee <sopwith@redhat.com>
	* gtk/gtkhandlebox.c: It mostly works now, please test it and make
	fixes as needed.

Fri Dec 26 11:20:03 1997  Scott Goehring  <scott@poverty.bloomington.in.us>

	* gtk/Makefile.am (gtkinclude_HEADERS): added gtkhandlebox.c
