@@ -1,3 +1,9 @@
+Fri Jay  2 23:52 PST 1998 Jay Painter <jpaint@serv.net>
+	* reverted glibconfig.h and glib.h files back to the
+	way they were before my ugly hack
+	* gtk/gtkclist.c:
+	* glib/gscanner.c: removed inlines from clist and gscanner
+
 Fri Jan  2 23:55:24 CST 1998 Shawn T. Amundson <amundson@gimp.org>
 
 	* Several portability fixes from Michael Callahan 
